@@ -1,3 +1,7 @@
+2019-01-02 Hanna Knutsson <hanna.knutsson@protonmail.com>
+
+	* Fix limit((1+\a/x)^x,infinity), and similar
+
 2018-12-31 Hanna Knutsson <hanna.knutsson@protonmail.com>
 
 	* Support vectors of conditions and expression in if()
